# heapswap

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  nul  package-lock.json  package.json  prettier.config.js  tsconfig.json
_archive/server_v2/: Cargo.toml
_archive/server_v2/src/: main.rs
_archive/server_v2/src/networking/: server.rs
_archive/subfield_proto/: Cargo.toml  build.rs  crypto.proto
_archive/subfield_proto/protos/: V256.proto  action_record.proto  message.proto  subkey.proto  versioned_bytes.proto
_archive/subfield_proto/src/: example.rs  lib.rs  main.rs
crates/browser/: .gitignore  Cargo.toml  README.md  index.ts  package.json
crates/browser/browser-test/: .gitignore  package.json  vite.config.ts
crates/browser/browser-test/src/: App.tsx  heapswap.ts  main.tsx
crates/browser/src/: lib.rs
crates/browser/src/arr/: arr.rs
crates/browser/src/crypto/: cipher.rs  hash.rs  keys.rs  mod.rs  u256.rs
crates/browser/src/misc/: conversions.rs  mod.rs  traits.rs  u256.rs
crates/browser/src/networking/: mod.rs  websocket-websys.rs  websocket.rs
crates/browser/tests/: crypto.test.ts  jac_dht.test.ts  stream.test.ts
crates/core/: Cargo.toml  README.md  index.ts  package.json
crates/core/browser-test/src/: heapswap.ts
crates/core/src/: constants.rs  lib.rs  lib_wasm.rs  main.rs  traits.rs
crates/core/src/arr/: arr.rs  mod.rs
crates/core/src/bev/: entrypoint.rs
crates/core/src/bys/: bys.rs
crates/core/src/crypto/: address.rs  cipher.rs  hash.rs  keys.rs  mod.rs  noise.rs  utils.rs
crates/core/src/ham_dht/: dht.rs  mod.rs  node.rs
crates/core/src/jac_dht/: jac_dht.rs  mod.rs  node.rs  nodes.rs
crates/core/src/kad_dht/: kad_dht.rs  mod.rs  node.rs
crates/core/src/messages/: hello.rs  messages.rs  mod.rs  rpc.rs
crates/core/src/misc/: comparison.rs  conversions.rs  mod.rs  portal.rs  traits.rs  u256.rs
crates/core/src/networking/: connection.rs  create_swarm.rs  demo_websocket.rs  entry.rs  fieldplexer.rs  mod.rs  subfield.rs  swarm_create.rs  swarm_handle_event.rs  websocket.rs
crates/core/src/subfield/: author.rs  fieldplexer.rs  message.rs  mod.rs  subfield.rs  subfield_client.rs  topic.rs
crates/core/src/swarm/: mod.rs  swarm_create.rs  swarm_handle_event.rs
crates/core/tests/: crypto.test.ts  jac_dht.test.ts  noise.test.ts  stream.test.ts
crates/heapswap/: Cargo.toml
crates/heapswap/src/: main.rs
crates/protos/: Cargo.toml  build.rs  goal.rs
crates/protos/archive/: poem_build.rs
crates/protos/protos/: crypto.proto  hello.proto
crates/protos/src/: buttons.proto  pants.proto  shirts.proto  shoes.proto
crates/protos/src/fruits/: apples.proto
crates/server/: Cargo.toml
crates/server/src/: _main.rs  lib.rs  main.rs  shirt.rs
crates/server/src/networking/: server.rs
crates/server/src/swarm/: mod.rs  tokio_swarm.rs
crates/subfield/: Cargo.toml  README.md  STREAM.md  index.ts
crates/subfield/browser-test/: package.json
crates/subfield/browser-test/src/: App.tsx  subfield.ts
crates/subfield/src/: lib.rs
crates/subfield/src/arr/: arr.rs
crates/subfield/src/chord/: chord.map.rs  fingers.rs  mod.rs
crates/subfield/src/client/: client.rs  swarm_behaviour.rs  swarm_create.rs
crates/subfield/src/crypto/: cipher.rs  hash.rs  mod.rs  noise.rs
crates/subfield/src/dht/: behaviour.rs  constants.rs  control.rs  events.rs  handler.rs  mod.rs  shared.rs  upgrade.rs
crates/subfield/src/misc/: arena.rs  arr.rs  channels.rs  mod.rs  ordered_map.rs  portal.rs  portal_manager.rs  proto_utils.rs  setmap.rs  traits.rs  u256.rs  vector.rs  versioned_bytes.rs
crates/subfield/src/proto/: base_error.rs  base_message.rs  base_record.rs  (+21 more)
crates/subfield/tests/: crypto.test.ts  noise.test.ts
crates/subfield_proto/: Cargo.toml  build.rs
crates/subfield_proto/proto/: _helloworld.proto  message_pubsub.proto  message_record.proto  message_system.proto  record.proto  service.proto  subkey.proto  versioned_bytes.proto
crates/subfield_proto/protos/: action_pubsub.proto  action_system.proto  crypto.proto  message.proto  subkey.proto
crates/subfield_proto/src/: client.rs  lib.rs  main.rs  server.rs
crates/subfield_swarm/: Cargo.toml
crates/subfield_swarm/src/: swarm_behaviour.rs  swarm_config.rs  swarm_create.rs
crates/subfield_utils/: Cargo.toml  README.md  package.json  tsconfig.json
crates/subfield_utils/src/: lib.rs
heapswap_macros/: Cargo.toml  README.md
macros/: Cargo.toml  README.md
macros/src/: lib.rs
schemas/: Cargo.toml  README.md
schemas/schemas/: kademlia.capnp  keyspace.capnp  keyvector.capnp  node.capnp  point.capnp  readme.md
schemas/src/: main.rs
schemas/src/build_capnp/: build_capnp.rs  mod.rs  readme.md  write_flattened_mod.rs
schemas/src/schemas/: mod.rs  node_capnp.rs
server/: .gitignore  .rustfmt.toml  Cargo.toml  README.md
server/.sh/: test.sh
server/.sh/v8/: rusty-v8.sh
server/benches/: my_benchmark.rs
server/models/gte-small/: tokenizer.json
server/src/: api_routers.rs  app_state.rs  lib.rs  main.rs  mod.rs  serve.rs  server.rs
server/src/_archive/: axum_warp_main.rs  main.rs  original_main.rs
server/src/archive/: client.rs  main.rs
server/src/embeddings/: embedding_session.rs  mod.rs
server/src/sql/: mod.rs
server/src/yrs_axum/: axum_stream.rs  mod.rs  yjs_handlers.rs  yrs_doc.rs
server/tests/: mod.rs
server/tests/crypto/: ed.rs  mod.rs
server/tests/deno/: fs_module_loader.rs  heaptrack.rs  hello_world.rs  op2.js  ts_module_loader.rs  wasm.rs
server/tests/gluesql/: gluesql_test.rs  mod.rs
server/tests/kademlia/: hamming.rs  hnsw.rs  instant_distance.rs  kademlia_test.rs  lance_test.rs  mod.rs  nalgebra.rs  simd.rs
server/tests/libp2p/: libp2p_test.rs  mod.rs
server/tests/physics/: ham.rs  mod.rs  physics_test.rs
server/tests/polars/: mod.rs  polars_test.rs
server/tests/protobufs/: test_protobufs.rs
server/tests/storage/: lance.rs  mod.rs
server/tests/transformers/: embedding_session.rs  heaps.md  hnsw.rs  mod.rs  neap.rs  ort_test.rs
server/tests/webrtc/: mod.rs  webrtc_test.rs
server/tests/yrs/: server.rs
(+345 files in other folders)
