[package]
name = "heapswap_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = "2.0.48"
zerocopy = "0.7.32"
zerocopy-derive = "0.7.32"


[lib]
proc-macro = true

