[package]
name = "heapswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }

tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}

# memory
tikv-jemallocator = { version = "0.5.4", features = ["profiling", "stats", "background_threads_runtime_support"] }
tikv-jemalloc-sys =  { version = "0.5.4", features = ["profiling", "stats", "background_threads_runtime_support"] }
tikv-jemalloc-ctl = "0.5.4"

# networking
http = "1.0.0"
url = "2.5.0"
headers = "0.4.0"

tower = {version = "0.4.13", features = ["util"]}
tower-http = {version = "0.5.1", features = ["fs","trace"]}

axum = { version = "0.7.4", features = ["ws"] }
axum-extra = {version = "0.9.2", features = ["typed-header"]}

# async
async-trait = "0.1.77"
futures = "0.3.30"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# data structures
dashmap = "5.5.3"

# crdt
yrs = {version = "0.17.4", features = ["weak"] }
yrs-kvstore = "0.2.0"
y-sync = { version = "0.4.0", features = ["net"] }
y-sweet-core = "0.1.0"
warp = "0.3.6"
yrs-warp = "0.7.0"

# logging
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "env"] }
colored = "2.1.0"

# serialization
serde = {version = "1.0.195", features=["derive"]}
serde_json = "1.0.111"

# deno
deno_core = "0.249.0"
deno_ast = { version = "0.32.1", features = ["transpiling"] }
serde_v8 = "0.158.0"
#swc = {version="0.269.91"} # 0.269.91 required for deno_ast 0.32.1
#swc_ecma_visit = { version = "=0.96.17"}

# embeddings
ort = { version = "1.16.3", features = ["load-dynamic", "profiling", "fetch-models"] } # unsure if these features are needed
tokenizers = "0.15.1"
instant-distance = "0.6.1"

# utils
lib0 = "0.16.10"
nanoid = "0.4.0"
thiserror = "1.0.56"
human_bytes = "0.4.3"
time = "0.3.31"
memory-stats = "1.1.0"
rand = "0.8.5"
ndarray = "0.15.6"
timeit = "0.1.2"
base64 = "0.21.7"
num_cpus = "1.16.0"
faiss = { version = "0.12.1", features = ["static"] }

[dev-dependencies]
fastembed = "2.0.1"
