# see more package metadata at https://doc.rust-lang.org/cargo/reference/publishing.html

[package]
name = "heapswap"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
#publish = ["crates.io"]
homepage = "https://heapswap.com"
documentation = "https://docs.rs/heapswap"
description = "Heapswap's server-side engine"
exclude = ["tests/*", "examples/*", "models/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# local
heapswap_macros = {path = "../macros", version = "0.0.2"}
heapswap_schemas = {path = "../schemas", version = "0.0.1"}

# async
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }

tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}

async-trait = "0.1.77"
futures = "0.3.30"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }


# memory
tikv-jemallocator = { version = "0.5.4", features = ["profiling", "stats", "background_threads_runtime_support"] }
tikv-jemalloc-sys =  { version = "0.5.4", features = ["profiling", "stats", "background_threads_runtime_support"] }
tikv-jemalloc-ctl = "0.5.4"

# networking
http = "1.0.0"
url = "2.5.0"
headers = "0.4.0"
reqwest = "0.11.23"

tower = {version = "0.4.13", features = ["util"]}
tower-http = {version = "0.5.1", features = ["fs","trace"]}

axum = { version = "0.7.4", features = ["ws"] }
axum-extra = {version = "0.9.2", features = ["typed-header"]}

#crypto 
x25519-dalek = "2.0.0"
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2.1.0"
rsa = "0.9.6"
rust-argon2 = "2.1.0"
blake3 = "1.5.0"


# data structures
dashmap = "5.5.3"

# crdt
yrs = {version = "0.17.4", features = ["weak"] }
yrs-kvstore = "0.2.0"
y-sync = { version = "0.4.0", features = ["net"] }
y-sweet-core = "0.1.0"
warp = "0.3.6"
yrs-warp = "0.7.0"

# logging
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "env"] }
colored = "2.1.0"
thiserror = "1.0.56"
human_bytes = "0.4.3"

# profiling
memory-stats = "1.1.0"
num_cpus = "1.16.0"

# time
timeit = "0.1.2"
time = "0.3.31"
ndarray = "0.15.6"

# serialization
serde = {version = "1.0.195", features=["derive"]}
serde_json = "1.0.111"
capnp = "0.19.1"
capnp-rpc = "0.19.0"

# deno
deno_core = "0.249.0"
deno_ast = { version = "0.32.1", features = ["transpiling"] }
serde_v8 = "0.158.0"
#swc = {version="0.269.91"} # 0.269.91 required for deno_ast 0.32.1
#swc_ecma_visit = { version = "=0.96.17"}

# embeddings
ort = { version = "1.16.3" } #  features = ["profiling"]
tokenizers = "0.15.1"
instant-distance = "0.6.1"


# storage
vectordb = "0.4.5"
sled = "0.34.7"
byteorder = "1.5.0"
zerocopy = "0.7.32"
zerocopy-derive = "0.7.32"
arrow-schema = "49"
arrow-array = "49"

# conversion
base64 = "0.21.7"
hex = "0.4.3"

# utils
rand = "0.8.5"
lib0 = "0.16.10"
nanoid = "0.4.0"
terny = "0.2.0"
tempfile = "3.9.0"
pin-utils = "0.1.0"
xxhash-rust = "0.8.8"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
#fastembed = "2.0.1"
#faiss = { version = "0.12.1", features = ["static"] }

[[bench]]
name = "my_benchmark"
harness = false

[build-dependencies]
capnpc = "0.19.0"
walkdir = "2.4.0"
filetime = "0.2.23"
pkg-config = "0.3.28"
