# see more package metadata at https://doc.rust-lang.org/cargo/reference/publishing.html

[package]
name = "heapswap"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
#publish = ["crates.io"]
homepage = "https://heapswap.com"
documentation = "https://docs.rs/heapswap"
description = "Heapswap's server-side engine"
exclude = ["tests/*", "examples/*", "models/*"]
[toolchain]
channel = "nightly"
features = [ "portable_simd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# local
heapswap_macros = { path = "../macros", version = "*" }
heapswap_schemas = { path = "../schemas", version = "*" }


# async
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }

async-trait = "0.1.77"
async-std = { version = "1.12.0", features = ["attributes"] }
crossbeam = "0.8.4"
futures = "0.3.30"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }

# memory
tikv-jemallocator = { version = "0.5.4", features = [
  "profiling",
  "stats",
  "background_threads_runtime_support",
] }
tikv-jemalloc-sys = { version = "0.5.4", features = [
  "profiling",
  "stats",
  "background_threads_runtime_support",
] }
tikv-jemalloc-ctl = "0.5.4"

# networking
http = "1.0.0"
url = "2.5.0"
headers = "0.4.0"
reqwest = { version = "0.11.23", features = ["blocking"] }

tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }

axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }

# libp2p = { version = "0.53.2", features = [
#   "async-std",
#   "dns",
#   "kad",
#   "mdns",
#   "noise",
#   "macros",
#   "tcp",
#   "yamux",
#   "full",
# ] }

#crypto 
x25519-dalek = "2.0.0"
ed25519-dalek = "2.1.0"
# curve25519-dalek = "4"
chacha20poly1305 = "0.10.1"
rsa = "0.9.6"
rust-argon2 = "2.1.0"
blake3 = "1.5.0"
xxhash-rust = { version = "0.8.8", features = ["xxh3", "const_xxh3"] } 
dashmap = { version = "5.5.3", features = ["serde"] }

# crdt
yrs = { version = "0.17.4", features = ["weak"] }
yrs-kvstore = "0.2.0"
y-sync = { version = "0.4.0", features = ["net"] }
y-sweet-core = "0.1.0"
warp = "0.3.6"
yrs-warp = "0.7.0"

# logging
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "env"] }
colored = "2.1.0"
thiserror = "1.0.56"
human_bytes = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# profiling
memory-stats = "1.1.0"
num_cpus = "1.16.0"

# time
timeit = "0.1.2"
time = "0.3.31"
ndarray = "0.15.6"

# serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
capnp = "0.19.1"
capnp-rpc = "0.19.0"

# deno
deno_core = "0.249.0"
deno_ast = { version = "0.32.1", features = ["transpiling"] }
serde_v8 = "0.158.0"
#swc = {version="0.269.91"} # 0.269.91 required for deno_ast 0.32.1
#swc_ecma_visit = { version = "=0.96.17"}

# embeddings
ort = { version = "1.16.3" } #  features = ["profiling"]
tokenizers = "0.15.1"
instant-distance = "0.6.1"

# storage
# vectordb = "0.4.5"
# sled = "0.34.7"
# byteorder = "1.5.0"
# zerocopy = "0.7.32"
# zerocopy-derive = "0.7.32"
# arrow-array = "50.0"
# arrow-data = "50.0"
# arrow-ipc = "50.0"
# arrow-ord = "50.0"
# arrow-schema = "50.0"

# conversion
base64 = "0.21.7"
hex = "0.4.3"

# utils
rand = "0.8.5"
lib0 = "0.16.10"
nanoid = "0.4.0"
terny = "0.2.0"
tempfile = "3.9.0"
pin-utils = "0.1.0"
lazy_static = "1.4.0"
wide = "0.7.15"
nalgebra = { version = "0.32.3", features = ["std"] }
structopt = "0.3.26"
space = "0.18.0"
gnuplot = "0.0.41"
rand_pcg = "0.3.1"
bitarray = { version = "0.10.0", features = ["space"] }
itertools = "0.12.1"
num-traits = "0.2.17"
easybench = "1.1.1"
polars = { version = "0.37.0", features = ["lazy"] }
#hnsw_rs = "0.2.0"
#vectordb = "0.4.8"
chrono = "0.4.33"
simba = "0.8.1"
rapier3d = "0.18.0"
parry3d = "0.13.6"
gluesql = "0.15.0"
gluesql-core = "0.15.0"
crossbeam-skiplist = "0.1.3"
webrtc = "0.10.1"
spiral-server = { git = "https://github.com/blyssprivacy/sdk.git", rev = "9604fd30e1964ce2e24cd186b5bf3970dd878b5b", package = "spiral-server" }
spiral-rs = { git = "https://github.com/blyssprivacy/sdk.git", rev = "9604fd30e1964ce2e24cd186b5bf3970dd878b5b", package = "spiral-rs" }
rayon = "1.8.1"
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "x86_64"] }
libp2p = { version = "0.53.2", features = ["full"] }
quickcheck = "1.0.3"

#packed_simd = "0.3.9"
#packed_simd = { version = "0.3.8", package = "packed_simd_2" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[build-dependencies]
capnpc = "0.19.0"
walkdir = "2.4.0"
filetime = "0.2.23"
pkg-config = "0.3.28"
