[package]
name = "heapswap_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local
heapswap_core = { path = "../core" }
heapswap_protos = { path = "../protos" }
# Crypto
crypto-bigint.workspace = true
# Encoding
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
bincode.workspace = true
# Networking
reqwest.workspace = true
reqwest-websocket.workspace = true
#poem.workspace = true
#poem-openapi.workspace = true
headers.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
http.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true
snow.workspace = true
yamux.workspace = true
# Libp2p
libp2p = { workspace = true, features = [
	"gossipsub",
	"identify",
	"kad",
	"ping",
	"request-response",
	"dns",
	"mdns",
	"tcp",
	"noise",
	"yamux",
	"tokio",
	"macros"
] }
libp2p-webrtc.workspace = true
# Concurrency
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
# Debugging
tracing.workspace = true
tracing-subscriber.workspace = true
# Misc
timeit.workspace = true
strum.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
eyre.workspace = true
rand.workspace = true
#[[bin]]
#name = "example-websockets"
#path = "src/main.rs"
#[[bin]]
#name = "example-client"
#path = "src/client.rs"
