[package]
name = "subfield_proto"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
subfield_macro_proto_ext = { path = "../subfield_macro_proto_ext" }
base32.workspace = true
#protobuf.workspace = true
# serde.workspace = true
# serde_json.workspace = true
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true
once_cell.workspace = true

[dev-dependencies]
rand.workspace = true

[build-dependencies]
#protobuf-codegen.workspace = true
prost-build.workspace = true
#poem-grpc-build.workspace = true