[package]
name = "heapswap_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Local
#heapswap_core = { path = "../core" }
# Crypto
#crypto-bigint.workspace = true
#num-bigint.workspace = true
rand.workspace = true
getrandom.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
snow.workspace = true
# Encoding
base32.workspace = true
serde.workspace = true
# Async
futures.workspace = true
# Networking
yamux.workspace = true
# Wasm
wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true, features = [
	"futures-core-03-stream"
] }
#wasm-bindgen-rayon.workspace = true
#rayon.workspace = true
console_error_panic_hook.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
	"ReadableStream",
	"ReadableStreamDefaultReader",
	"ReadableStreamDefaultController",
	"BinaryType",
	"FileReader",
	"ProgressEvent",
	"WebSocket",
	"ErrorEvent",
	"MessageEvent",
	"File",
	"Blob"
] }
gloo = { workspace = true, features = [
	"timers",
	"events",
	"file",
	"dialogs",
	"storage",
	"render",
	#"console",
	"utils",
	"history",
	"worker",
	#"net ",

] }
# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-wasm.workspace = true
# Misc
lazy_static.workspace = true
once_cell.workspace = true
getset.workspace = true
num-traits.workspace = true
#derive_more.workspace = true
strum.workspace = true
ordered-float.workspace = true
priority-queue.workspace = true
pin-utils.workspace = true

[dev-dependencies]
timeit.workspace = true
