[package]
name = "heapswap_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Crypto
#crypto-bigint.workspace = true
#num-bigint.workspace = true
rand.workspace = true
getrandom.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
#snow.workspace = true
# Encoding
base32.workspace = true
serde.workspace = true
serde_bytes.workspace = true
bincode.workspace = true
# Datastructures
bytes.workspace = true
flume.workspace = true
# Wasm
wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true, features = [
	"futures-core-03-stream"
] }
#wasm-bindgen-rayon.workspace = true
#rayon.workspace = true
console_error_panic_hook.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
	"ReadableStream",
	"ReadableStreamDefaultReader",
	"ReadableStreamDefaultController",
	"BinaryType",
	"FileReader",
	"ProgressEvent",
	"WebSocket",
	"ErrorEvent",
	"MessageEvent",
	"File",
	"Blob"
] }
gloo = { workspace = true, features = [
	"timers",
	"events",
	"file",
	"dialogs",
	"storage",
	"render",
	#"console",
	"utils",
	"history",
	"worker",
	#"net ",

] }
# Async
futures.workspace = true
# Networking
#yamux.workspace = true
# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-wasm.workspace = true
# Misc
lazy_static.workspace = true
once_cell.workspace = true
getset.workspace = true
num-traits.workspace = true
#derive_more.workspace = true
strum.workspace = true
ordered-float.workspace = true
priority-queue.workspace = true
pin-utils.workspace = true
chrono.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { workspace = true, features = [
	#"async-std",
	#"autonat",
	"cbor",
	#"dcutr",
	#"dns",
	#"ecdsa",
	"ed25519",
	#"floodsub",
	"gossipsub",
	"identify",
	"json",
	"kad",
	"macros",
	#"mdns",
	#"memory-connection-limits",
	#"metrics",
	"noise",
	"ping",
	#"plaintext",
	#"pnet",
	#"quic",
	"relay",
	"rendezvous",
	"request-response",
	#"rsa",
	#"secp256k1",
	"serde",
	#"tcp",
	#"tls",
	#"tokio",
	#"uds",
	"wasm-bindgen",
	"websocket-websys",
	#"websocket",
	"webtransport-websys",
	"yamux",
	#"upnp",

] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { workspace = true, features = [
	#"async-std",
	#"autonat",
	"cbor",
	#"dcutr",
	"dns",
	#"ecdsa",
	"ed25519",
	#"floodsub",
	"gossipsub",
	"identify",
	"json",
	"kad",
	"macros",
	"mdns",
	#"memory-connection-limits",
	#"metrics",
	"noise",
	"ping",
	#"plaintext",
	#"pnet",
	"quic",
	"relay",
	"rendezvous",
	"request-response",
	#"rsa",
	#"secp256k1",
	"serde",
	"tcp",
	"tls",
	"tokio",
	#"uds",
	#"wasm-bindgen",
	#"websocket-websys",
	"websocket",
	#"webtransport-websys",
	"yamux",
	#"upnp",

] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
timeit.workspace = true
