[package]
name = "heapswap_core"
version = "0.1.0"
authors = ["kahnpoint <96557890+kahnpoint@users.noreply.github.com>"]
edition = "2021"

[features]
default = []
server = [
	# "axum",
	# "axum-extra",
	# "http",
	# "headers",
	"tokio/full",
	# "tokio-tungstenite",
	# "tower",
	# "tower-http",
	"tracing-subscriber",
	# "dioxus/axum",
	"libp2p/mdns",
	"libp2p/tokio",
	"libp2p/websocket",
	# "libp2p/webrtc",
	"libp2p/tcp",
	"libp2p/tls",
	"libp2p/dns",
	"libp2p/relay",
	"libp2p/quic",
	# "openssl"
	# "libp2p-webrtc/tokio",
	"gluesql/sled-storage",
	"gluesql/idb-storage",
	"gluesql/shared-memory-storage",
]
browser = [
	"libp2p/wasm-bindgen",
	"libp2p/websocket-websys",
	# "libp2p-webrtc-websys",
	"gloo",
	"gluesql/idb-storage",
	"gluesql/shared-memory-storage",
]

# client = []
# [[bin]]
# name = "client"
# path = "src/client.rs"
# [[bin]]
# name = "server"
# path = "src/main.rs"
# required-features = ["server"]
[dependencies]
#
## Networking
##
libp2p = { workspace = true, features = [
	# 	"async-std",
	"autonat",
	"cbor",
	"dcutr",
	# 	"dns",
	# 	"ecdsa",
	"ed25519",
	"gossipsub",
	"identify",
	# 	"json",
	"kad",
	"macros",
	# 	"mdns",
	# 	"memory-connection-limits",
	# 	"metrics",
	"noise",
	"ping",
	# 	"plaintext",
	# 	"pnet",
	# 	"quic",
	#    "relay",
	# 	"rendezvous",
	"request-response",
	# 	"rsa",
	# 	"secp256k1",
	"serde",
	# 	"tcp",
	# 	"tls",
	# 	"tokio",
	# 	"uds",
	# 	"wasm-bindgen",
	# 	"websocket-websys",
	# 	"websocket",
	# 	"webtransport-websys",
	"yamux",
	# 	"upnp",

] }
libp2p-webrtc-websys = { workspace = true, optional = true }
libp2p-websocket-websys = { workspace = true, optional = true }
libp2p-webrtc = { workspace = true, optional = true }
reqwest = { workspace = true }
# Crypto
#crypto-bigint.workspace = true
#num-bigint.workspace = true
rand.workspace = true
getrandom.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
#curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
snow.workspace = true
# Encoding
base32.workspace = true
serde.workspace = true
serde_bytes.workspace = true
bincode.workspace = true
# Datastructures
bytes.workspace = true
dashmap.workspace = true
# Storage
gluesql.workspace = true
# Concurrency
async-stream.workspace = true
futures.workspace = true
futures-channel.workspace = true
tokio = { workspace = true, optional = true }
# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
eyre.workspace = true
# WASM
gloo = { workspace = true, optional = true }
# Misc
lazy_static.workspace = true
once_cell.workspace = true
getset.workspace = true
num-traits.workspace = true
strum.workspace = true

[dev-dependencies]
timeit.workspace = true

[build]
# rustflags = ["-Z", "threads=8"]
