[package]
name = "heapswap"
version = "0.1.0"
authors = ["kahnpoint <96557890+kahnpoint@users.noreply.github.com>"]
edition = "2021"

[dependencies]
# subfield = { path = "../subfield", features = ["libp2p-server"] }
#
## Networking
##
# http.workspace = true
# headers.workspace = true
# axum.workspace = true
# axum-extra.workspace = true
# tower.workspace = true
# tower-http.workspace = true
# tokio.workspace = true
# tokio-tungstenite.workspace = true
#
## Logging
##
tracing-subscriber.workspace = true
