[package]
name = "heapswap_protos"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
#protobuf.workspace = true
prost.workspace = true
bytes.workspace = true
prost-types.workspace = true

[build-dependencies]
#protobuf-codegen.workspace = true
prost-build.workspace = true
