[package]
name = "heapswap_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local
heapswap_core = { path = "../core" }
heapswap_protos = { path = "../protos" }
# Encoding
prost.workspace = true
serde.workspace = true
bytes.workspace = true
# Networking
poem.workspace = true
poem-openapi.workspace = true
snow.workspace = true
yamux.workspace = true
# Libp2p
#libp2p = {workspace=true, features= ["gossipsub", "identify", "kad", "ping", "request-response", "dns", "mdns", "tcp", "noise", "yamux", "tokio", "macros" ]}
# Concurrency
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
# Debugging
tracing.workspace = true
tracing-subscriber.workspace = true
# Misc
timeit.workspace = true
strum.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
