[package]
name = "heapswap_server"
version = "0.1.0"
edition = "2021"

[dependencies]
heapswap_core = { path = "../core", features = ["server"] }
#
## Networking
##
http.workspace = true
headers.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
#
## Logging
##
tracing-subscriber.workspace = true
